--- a/.github/workflows/ci-home.yml
+++ b/.github/workflows/ci-home.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI for lambda-home
 on: [push, pull_request]
 jobs:
   test:
@@ -19,4 +19,4 @@ jobs:
       - run: |
           cd etc/e11-cli/lambda-home
           make install
-          make pytest
+          make lint
