--- a/etc/e11-cli/lambda-home/samconfig-stage.toml
+++ b/etc/e11-cli/lambda-home/samconfig-stage.toml
@@ -15,6 +15,9 @@ template_file = ".aws-sam/build/template.yaml"
 [default.build.parameters]
 cached = false
 parallel=true
+use_container = true
+dependency_layer = false
+
 
 [default.sync.parameters]
 stack_name = "home-app-stage"
