--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -19,14 +19,18 @@ dependencies = [
     "itsdangerous>=2.2.0,<3.0.0",
     "pyjwt>=2.10.1,<3.0.0",
     "jinja2>=3.1.6,<4.0.0",
+    "pydantic"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pylint>=3.3.8",
-    "pytest>=8.4.1,<9.0.0",
-    "pytest-cov>=6.2.1,<7.0.0",
-    "flask>=3.0.0,<4.0.0",
+   "pylint>=3.3.8",
+   "pytest>=8.4.1,<9.0.0",
+   "pytest-cov>=6.2.1,<7.0.0",
+   "flask>=3.0.0,<4.0.0",
+   "boto3-stubs[essential]",
+   "types-requests",
+   "pyright"
 ]
 
 [project.scripts]
