--- a/etc/e11-cli/lambda-home/Makefile
+++ b/etc/e11-cli/lambda-home/Makefile
@@ -40,7 +40,7 @@ pyright:.venv/pyvenv.cfg
 pytest: .venv/pyvenv.cfg
 	make vend-e11
 	make lint
-	.venv/bin/python -m pytest -v --cov=. --cov-report=xml --cov-report=html --log-cli-level=DEBUG tests
+	.venv/bin/pytest -q --cov=.   --cov-report=term --cov-report=xml --log-cli-level=DEBUG tests/
 
 
 build-prod: template.yaml samconfig.toml src/requirements.txt
