--- a/etc/e11-cli/lambda-home/samconfig-stage.toml
+++ b/etc/e11-cli/lambda-home/samconfig-stage.toml
@@ -8,7 +8,7 @@ profile = "fas"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
 disable_rollback = false
-parameter_overrides = "UsersTableName=\"e11-users\" SessionsTableName=\"home-app-sessions\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"DEBUG\""
+parameter_overrides = "UsersTableName=\"e11-users\" SessionsTableName=\"home-app-sessions\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"DEBUG\""
 image_repositories = []
 template_file = ".aws-sam/build/template.yaml"
 
@@ -24,4 +24,4 @@ stack_name = "home-app-stage"
 region = "us-east-1"
 profile = "fas"
 capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
-parameter_overrides = "UsersTableName=\"e11-users\" SessionsTableName=\"home-app-sessions\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"DEBUG\""
+parameter_overrides = "UsersTableName=\"e11-users\" SessionsTableName=\"home-app-sessions\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"DEBUG\""
