--- a/etc/e11-cli/lambda-home/samconfig.toml
+++ b/etc/e11-cli/lambda-home/samconfig.toml
@@ -8,7 +8,7 @@ s3_prefix = "home-app"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
 disable_rollback = false
-parameter_overrides = "UsersTableName=\"e11-users\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"DEBUG\""
+parameter_overrides = "UsersTableName=\"e11-users\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"DEBUG\""
 image_repositories = []
 template_file = ".aws-sam/build/template.yaml"
 #template_file = "template.yaml"
