--- a/etc/e11-cli/lambda-home/template.yaml
+++ b/etc/e11-cli/lambda-home/template.yaml
@@ -26,6 +26,7 @@ Globals:
       Variables:
         LOG_LEVEL: !Ref LogLevel
         OIDC_SECRET_ID: !Ref OidcSecretId
+        SSH_SECRET_ID: !Ref SshSecretId
         USERS_TABLE_NAME: !Ref UsersTableName
         SESSIONS_TABLE_NAME: !Ref SessionsTable     # new (optional helper)
 
@@ -36,6 +37,9 @@ Parameters:
   OidcSecretId:
     Type: String
     Description: Secrets Manager SecretId/ARN containing the OIDC data
+  SshSecretId:
+    Type: String
+    Description: Secrets Manager SecretId/ARN containing the SSH data
   HostedZoneId:
     Type: String
     Description: Route53 Hosted Zone ID for csci-e-11.org (e.g., Z123ABC...)
@@ -122,7 +126,9 @@ Resources:
             - Sid: SecretsGet
               Effect: Allow
               Action: secretsmanager:GetSecretValue
-              Resource: !Ref OidcSecretId
+              Resource:
+                - !Ref OidcSecretId
+                - !Ref SshSecretId
 
             - Sid: AllowRoute53Changes
               Effect: Allow
