--- a/etc/e11-cli/lambda-home/Makefile
+++ b/etc/e11-cli/lambda-home/Makefile
@@ -22,7 +22,7 @@ install:
 	make .venv/pyvenv.cfg
 
 .venv/pyvenv.cfg: pyproject.toml Makefile
-	$(PYTHON) -m venv .venv
+	python -m venv .venv
 	.venv/bin/pip install -e .
 	.venv/bin/pip install -e ".[dev]"
 
