--- a/.github/workflows/ci-e11.yml
+++ b/.github/workflows/ci-e11.yml
@@ -37,12 +37,14 @@ jobs:
           poetry --version
 
       - name: e11 command tests with coverage
-        run: make pytest
+        run: |
+          make lint
+          make pytest
 
-      - name: lambda-home tests with coverage
+      - name: lambda-home tests with coverage require Python 3.13
         if: matrix.python-version == '3.13'
         run: |
-          (cd lambda-home; make pytest)
+          (cd lambda-home; make lint; make pytest)
 
       - name: list coverage files
         run: |
