--- a/.github/workflows/ci-e11.yml
+++ b/.github/workflows/ci-e11.yml
@@ -44,8 +44,7 @@ jobs:
       - name: lambda-home tests with coverage require Python 3.13
         if: matrix.python-version == '3.13'
         run: |
-          (cd lambda-home; make .venv/pyenv.cfg)
-          (cd lambda-home; PYTHONPATH=src/home_app/e11.whl .venv/bin/python -c 'import src.home_app.secrets')
+          (cd lambda-home; make install)
           (cd lambda-home; make lint)
           (cd lambda-home; make pytest)
 
