--- a/.github/workflows/ci-e11.yml
+++ b/.github/workflows/ci-e11.yml
@@ -54,9 +54,16 @@ jobs:
 
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.13'
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           files: coverage.xml,lambda-home/coverage.xml
           flags: unittests
           fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Upload test results to Codecov
+        if: matrix.python-version == '3.13'
+        uses: codecov/test-results-action@v1
+        with:
+          files: junit1.xml,lambda-home/junit1.xml
           token: ${{ secrets.CODECOV_TOKEN }}
