--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "itsdangerous>=2.2.0,<3.0.0",
     "pyjwt>=2.10.1,<3.0.0",
     "jinja2>=3.1.6,<4.0.0",
-    "pydantic"
+    "pydantic",
+    "crossplane"
 ]
 
 [project.optional-dependencies]
